--- a/index.html
+++ b/index.html
@@ -375,6 +375,18 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="theme-option" data-theme="blue">
+                            <div class="theme-preview blue-preview">
+                                <div class="theme-preview-header">Синяя тема</div>
+                                <div class="theme-preview-body">
+                                    <div class="theme-preview-content">
+                                        <div class="theme-preview-row"></div>
+                                        <div class="theme-preview-row"></div>
+                                        <div class="theme-preview-row"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     
                     <h5><i class="fas fa-text-height"></i> Размер шрифта:</h5>
