Добавлены новые темы: белая и темно-серая. Версия обновлена до 1.1.0

--- a/index.html
+++ b/index.html
@@ -363,9 +363,33 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="theme-option" data-theme="white">
+                            <div class="theme-preview white-preview">
+                                <div class="theme-preview-header">Белая тема</div>
+                                <div class="theme-preview-body">
+                                    <div class="theme-preview-content">
+                                        <div class="theme-preview-row"></div>
+                                        <div class="theme-preview-row"></div>
+                                        <div class="theme-preview-row"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="theme-option" data-theme="dark">
                             <div class="theme-preview dark-preview">
                                 <div class="theme-preview-header">Тёмная тема</div>
+                                <div class="theme-preview-body">
+                                    <div class="theme-preview-content">
+                                        <div class="theme-preview-row"></div>
+                                        <div class="theme-preview-row"></div>
+                                        <div class="theme-preview-row"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="theme-option" data-theme="gray-dark">
+                            <div class="theme-preview gray-dark-preview">
+                                <div class="theme-preview-header">Темно-серая</div>
                                 <div class="theme-preview-body">
                                     <div class="theme-preview-content">
                                         <div class="theme-preview-row"></div>
@@ -958,7 +982,7 @@
                 // Изменяем версию в настройках
                 const versionElement = document.getElementById('versionNumber');
                 if (versionElement) {
-                    versionElement.textContent = "Версия: 1.0.0 (Desktop)";
+                    versionElement.textContent = "Версия: 2.0.0 (Desktop)";
                 }
             });
         }
